# QML-exercise

./: README.md
build-chapter4-1Desktopcontrol-Replacement_for_Desktop_Qt_5_9_1_MinGW_32bit-Debug/: .ninja_deps  .ninja_log  .ninja_log.restat  CMakeCache.txt  appchapter4-1Desktopcontrol.exp  appchapter4-1Desktopcontrol.ilk  appchapter4-1Desktopcontrol.lib  appchapter4-1desktopcontrol_qmltyperegistrations.cpp  build.ninja  cmake_install.cmake
build-chapter4-2Movetomobile-Replacement_for_Desktop_Qt_5_9_1_MinGW_32bit-Debug/: .ninja_deps  .ninja_log  .ninja_log.recompact  .ninja_log.restat  CMakeCache.txt  appchapter4-1Desktopcontrol.exp  appchapter4-1Desktopcontrol.ilk  appchapter4-2Movetomobile.exp  appchapter4-2Movetomobile.ilk  appchapter4-2Movetomobile.lib  appchapter4-2movetomobile_qmltyperegistrations.cpp  build.ninja  cmake_install.cmake
build-chapter4-3Nestedscreens-Replacement_for_Desktop_Qt_5_9_1_MinGW_32bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  appchapter4-3Nestedscreens.exp  appchapter4-3Nestedscreens.ilk  appchapter4-3Nestedscreens.lib  appchapter4-3nestedscreens_qmltyperegistrations.cpp  build.ninja  cmake_install.cmake
build-chapter4-4Sidebyside-Replacement_for_Desktop_Qt_5_9_1_MinGW_32bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  appchapter4-4Sidebyside.exp  appchapter4-4Sidebyside.ilk  appchapter4-4Sidebyside.lib  appchapter4-4sidebyside_qmltyperegistrations.cpp  build.ninja  cmake_install.cmake  qtcsettings.cmake
build-chapter4-5DocumentWindows-Replacement_for_Desktop_Qt_5_9_1_MinGW_32bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  appchapter4-5DocumentWindows.exp  appchapter4-5DocumentWindows.ilk  appchapter4-5DocumentWindows.lib  appchapter4-5documentwindows_qmltyperegistrations.cpp  build.ninja  cmake_install.cmake
chapter1-1Wheel/: TimerEvent.qml  chapter1-1Wheel.qml  chapter1-1Wheel.qmlc  chapter1-1Wheel.qmlproject
chapter1-windmill/: test1-windmill.qml  test1-windmill.qmlproject
chapter2-1TextChange/: test2-1TextChange.qml  test2-1TextChange.qmlc  test2-1TextChange.qmlproject
chapter2-2Rectangle/: test2-2Rectangle.qml  test2-2Rectangle.qmlc
chapter2-3Button/: ClickImages.qml  test2-3Button.qmlproject
chapter2-4positioner/: BlackRect.qml  BlackRect.qmlc  BlueRect.qml  BlueRect.qmlc  GreenRect.qml  GreenRect.qmlc  RedRect.qml  RedRect.qmlc  chapter2-4positioner.qml  chapter2-4positioner.qmlc  chapter2-4positioner.qmlproject
chapter2-5Layout/: chapter2-5Layout.qml  chapter2-5Layout.qmlc  chapter2-5Layout.qmlproject
chapter2-6LayoutNesting/: BlueRectangle.qml  BlueRectangle.qmlc  RedRectangle.qml  RedRectangle.qmlc  chapter2-6LayoutNesting.qml  chapter2-6LayoutNesting.qmlc  chapter2-6LayoutNesting.qmlproject
chapter2-7KeyboardInput/: RectInput.qml  chapter2-7KeyboardInput.qml  chapter2-7KeyboardInput.qmlproject
chapter3-1Amimation/: chapter3-1Amimation.qml  chapter3-1Amimation.qmlc  chapter3-1Amimation.qmlproject
chapter4-1Desktopcontrol/: CMakeLists.txt  Main.qml  main.cpp
chapter4-5DocumentWindows/: CMakeLists.txt  DocumentWindows.qml  Main.qml  main.cpp
common/: BlueBox.qml  (+1 more)
(+265 files in other folders)
